# cdn-telemetry-kit

./: .gitignore  README.md  pyproject.toml
docs/: telemetry-contract-v2.md  telemetry-contract.md
scripts/: emit_agg15m_json_each_row.py  emit_json_eachrow.py  gen_csv.py
src/cdn_telemetry_kit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/telemetry_kit/: __init__.py  generator.py  schema.py
src/telemetry_kit/emit/: __init__.py  csv.py
