[project]
name = "cdn-telemetry-kit"
version = "0.1.0"
description = "Single source of truth for CDN telemetry schema + synthetic generator"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
